--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "build": "tsc --sourceMap",
     "build:watch": "tsc --sourceMap --watch",
     "build:clean": "rm -rf build",
+    "routes": "ts-node -T src/scripts/make-routes src/routes src/routes.ts",
     "server": "node build/server.js",
     "server:watch": "nodemon build/server.js",
     "test": "NODE_ENV=test mocha",
@@ -22,6 +23,7 @@
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.19",
     "supertest": "^6.1.3",
+    "ts-node": "^10.0.0",
     "typescript": "^4.3.5"
   },
   "dependencies": {
