--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "build:watch": "tsc --sourceMap --watch",
     "build:clean": "rm -rf build",
     "routes": "ts-node -T src/scripts/make-routes src/routes src/routes.ts",
+    "db": "ts-node -T src/scripts/db.ts",
+    "console": "node --experimental-repl-await",
     "server": "node build/server.js",
     "server:watch": "nodemon build/server.js",
     "test": "NODE_ENV=test mocha",
@@ -17,6 +19,7 @@
     "@types/mocha": "^8.2.2",
     "@types/morgan": "^1.9.2",
     "@types/node": "^15.14.0",
+    "@types/pg": "^8.6.0",
     "@types/supertest": "^2.0.11",
     "mocha": "^9.0.1",
     "nodemon": "^2.0.9",
@@ -28,8 +31,11 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "commander": "^7.2.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "morgan": "^1.10.0"
+    "knex": "^0.95.6",
+    "morgan": "^1.10.0",
+    "pg": "^8.6.0"
   }
 }
