--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.12",
+    "@types/jws": "^3.2.4",
     "@types/mocha": "^8.2.2",
     "@types/morgan": "^1.9.2",
     "@types/node": "^15.14.0",
@@ -39,6 +40,7 @@
     "commander": "^7.2.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jws": "^4.0.0",
     "morgan": "^1.10.0",
     "pg": "^8.6.0",
     "reflect-metadata": "^0.1.13",
