--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
+    "class-validator": "^0.13.1",
     "commander": "^7.2.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
